<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="280dp"
        android:layout_height="350dp"
        android:background="@drawable/edittext_bg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp">
    <TextView
        android:id="@+id/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/login_header"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/name"
        android:background="@+drawable/edittext_bg"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/loginHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/password"
        android:background="@+drawable/edittext_bg"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/name"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/logInButton"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password"
        android:layout_centerVertical="true"
        android:text="@string/log_in"/>
    <Button
        android:id="@+id/SendPasswordButton"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:layout_marginTop="10dp"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/RegisterButton"
        android:layout_centerVertical="true"
        android:text="@string/send_password"/>

    <Button
        android:id="@+id/RegisterButton"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:layout_marginTop="10dp"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logInButton"
        android:layout_centerVertical="true"
        android:text="@string/register"/>
</RelativeLayout>
</RelativeLayout>